style.css
@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
*  {
    font-family: 'Bangers', cursive;
    color: white;
 }

 .nav-container{
    display: flex;
    flex-direction: row;
    border-top: solid black;
    border-bottom: solid black;
}
.nav-right{
    display: flex;
    justify-content: flex-end;
    width: 77%;
    background-color: black;
}
.nav-left{
    width: 23%;
}
body{
    background-color: rgb(80, 77, 77);
    /* background-image: url("Images/Universe.png"); */
    /* background-size: cover;    */
    /* this lead to working with one image but expands the page. */
    background-repeat: no-repeat;
    /* object-fit: cover; */
    /* background-repeat: unset; */
    background-repeat: round;
    width: 100%;
    
}
 
.menu {
    background-color: black;
}

form {
    width: 340px;
    height: 39px;
}
a{
    color:white;
}
a:hover, li:hover {
    background-color: #f0131e;
    
}

.input-group-field{
    color: #008000;
}

#searchButton .searchBar a .is-dropdown-submenu-parent .menu{
    height: 39px;
}

#searchButton{
    color: yellow;
    background-color: rgb(103, 52, 170) !important;
}
#searchButton:hover{
    background-color: yellow;
}
h4 {
    font-family: 'Bangers', cursive;
    color: yellow;
    text-align: center;
    }

.grid-x.grid-margin-x.small-up-2.medium-up-3{
padding-top: 12px;
background-color: rgb(103, 52, 170);
border: 30px solid black;
}

p {
color:yellow;
}

.zoom:hover{
    transform: scale(1.2); 
}

.card-section:hover {
    background: #f0131e;
    /* This section is the hover for the cards already displayed */
}

.card {
    background: black;
}

.card:hover{
    background: #f0131e;
}

